--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,6 +19,8 @@ jobs:
             ${{ runner.os }}-gomod-
       - run: go mod download
       - name: Install golangci-lint
-        run: curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.18.0
+        run: curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s --  -b $(go env GOPATH)/bin
+      - name: Add PATH
+        run: echo "::add-path::$(go env GOPATH)/bin"
       - name: golangci-lint
         run: golangci-lint run
