--- a/sample/sqlboiler.yaml
+++ b/sample/sqlboiler.yaml
@@ -1,7 +1,7 @@
 db:
   type: mysql
   name: twitter-clone
-table:
+tables:
   users:
     id:
       type: int(11)
@@ -15,11 +15,11 @@ table:
       null: false
     created_at:
       type: datetime(6)
-      default: current_timestamp
+      default: CURRENT_TIMESTAMP
       null: false
     updated_at:
       type: datetime(6)
-      default: current_timestamp
+      default: CURRENT_TIMESTAMP
       null: false
     deleted_at:
       type: datetime(6)
@@ -42,7 +42,7 @@ table:
       default: false
     created_at:
       type: datetime(6)
-      default: current_timestamp
+      default: CURRENT_TIMESTAMP
       null: false
     updated_at:
       type: datetime(6)
@@ -67,7 +67,7 @@ table:
         users: id
     created_at:
       type: datetime(6)
-      default: current_timestamp
+      default: CURRENT_TIMESTAMP
       null: false
     deleted_at:
       type: datetime(6)
@@ -87,7 +87,7 @@ table:
       null: false
     created_at:
       type: datetime(6)
-      default: current_timestamp
+      default: CURRENT_TIMESTAMP
       null: false
     deleted_at:
       type: datetime(6)
