--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -67,7 +67,6 @@ jobs:
     env:
       GOCACHE: "/tmp/go/cache"
     steps:
-      - run: sudo /etc/init.d/mysql start
       - uses: actions/setup-go@v1
         with:
           go-version: 1.14
@@ -86,4 +85,4 @@ jobs:
             ${{ runner.os }}-go-build-${{ github.ref }}-
             ${{ runner.os }}-go-build-
       - name: Run test
-        run: go test ./... -vet=off
+        run: go test ./...
