--- a/sample/sqlboiler.yaml
+++ b/sample/sqlboiler.yaml
@@ -9,18 +9,18 @@ tables:
       key: PRI
     - name: name
       type: varchar(32)
-      null: false
+      no_null: true
     - name: password
       type: char(128)
-      null: false
+      no_null: true
     - name: created_at
       type: datetime(6)
       default: CURRENT_TIMESTAMP
-      null: false
+      no_null: true
     - name: updated_at
       type: datetime(6)
       default: CURRENT_TIMESTAMP
-      null: false
+      no_null: true
     - name: deleted_at
       type: datetime(6)
       default: null
@@ -30,20 +30,20 @@ tables:
       key: PRI
     - name: user_id
       type: int(11)
-      null: false
+      no_null: true
       foreign_key:
         users: id
     - name: content
       type: text
-      null: false
+      no_null: true
     - name: is_pinned
       type: boolean
-      null: false
+      no_null: true
       default: false
     - name: created_at
       type: datetime(6)
       default: CURRENT_TIMESTAMP
-      null: false
+      no_null: true
     - name: updated_at
       type: datetime(6)
       default: null
@@ -57,18 +57,18 @@ tables:
       key: PRI
     - name: user_id
       type: int(11)
-      null: false
+      no_null: true
       foreign_key:
         users: id
     - name: target_user_id
       type: int(11)
-      null: false
+      no_null: true
       foreign_key:
         users: id
     - name: created_at
       type: datetime(6)
       default: CURRENT_TIMESTAMP
-      null: false
+      no_null: true
     - name: deleted_at
       type: datetime(6)
       default: null
@@ -79,16 +79,16 @@ tables:
       key: PRI
     - name: user_id
       type: int(11)
-      null: false
+      no_null: true
       foreign_key:
         users: id
     - name: target_message_id
       type: varchar(36)
-      null: false
+      no_null: true
     - name: created_at
       type: datetime(6)
       default: CURRENT_TIMESTAMP
-      null: false
+      no_null: true
     - name: deleted_at
       type: datetime(6)
       default: null
