--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,6 +40,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-build-${{ github.ref }}-
             ${{ runner.os }}-go-build
+      - run: go get github.com/rakyll/statik
       - run: make build
       - run: make all
   lint:
