--- a/sample/sqlboiler.yaml
+++ b/sample/sqlboiler.yaml
@@ -50,7 +50,7 @@ tables:
     - name: deleted_at
       type: datetime(6)
       default: null
-  follow:
+  follows:
     - name: id
       type: int(11)
       auto_increment: true
@@ -72,7 +72,7 @@ tables:
     - name: deleted_at
       type: datetime(6)
       default: null
-  favorite:
+  favorites:
     - name: id
       type: int(11)
       auto_increment: true
