--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,6 +2,8 @@ name: CI
 
 on: 
   push:
+    branches:
+      - master
   pull_request:
 
 jobs:
@@ -62,7 +64,7 @@ jobs:
       - name: golangci-lint
         uses: reviewdog/action-golangci-lint@v1
         with:
-          golangci_lint_flags: "--disable-all -E golint --out-format=line-number"
+          golangci_lint_flags: "--disable-all -E golint gofmt --out-format=line-number"
           reporter: github-pr-review
   test:
     name: Test
